feat 为limits示例文件添加cpu配置

--- a/kubernetes/demo/limit.yaml
+++ b/kubernetes/demo/limit.yaml
@@ -6,6 +6,8 @@ spec:
   limits:
     - default:
         memory: 512Mi
+        cpu: 300m
       defaultRequest:
         memory: 64Mi
+        cpu: 100m
       type: Container
