--- a/kubernetes/resources/yaml/limitrange/cpu-demo.yaml
+++ b/kubernetes/resources/yaml/limitrange/cpu-demo.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: LimitRange
 metadata:
-  name: mem-small
+  name: cpu-demo
 spec:
   limits:
     - default:
-        memory: 512Mi
         cpu: 300m
       defaultRequest:
-        memory: 64Mi
         cpu: 100m
       type: Container
