--- a/docker/registry/docker-registry.yaml
+++ b/docker/registry/docker-registry.yaml
@@ -3,6 +3,32 @@ apiVersion: v1
 metadata:
   name: bing
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: docker-registry
+data:
+  config.yml: |
+    version: 0.1
+    log:
+      fields:
+        service: registry
+    storage:
+      cache:
+        blobdescriptor: inmemory
+      filesystem:
+        rootdirectory: /var/lib/registry
+    http:
+      addr: :5000
+      headers:
+        X-Content-Type-Options: [nosniff]
+    health:
+      storagedriver:
+        enabled: true
+        interval: 10s
+        threshold: 3
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,7 +47,7 @@ spec:
     spec:
       containers:
       - name: registry
-        image: registry:2.0
+        image: registry:2
         resources:
           limits:
             memory: "512Mi"
@@ -31,11 +57,16 @@ spec:
         volumeMounts:
           - name: library
             mountPath: /var/lib/registry
+          - name: config
+            mountPath: /etc/docker/registry
       volumes:
         - name: library
           nfs:
             path: /data2/registry
             server: 192.168.0.248
+        - name: config
+          configMap:
+            name: docker-registry
 ---
 apiVersion: v1
 kind: Service
